--- a/WPP_DB.ipynb
+++ b/WPP_DB.ipynb
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 3,
@@ -115,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 4,
@@ -142,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 5,
@@ -169,7 +169,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 6,
@@ -199,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 7,
@@ -230,7 +230,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 8,
@@ -309,7 +309,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 10,
@@ -337,7 +337,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 11,
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 12,
@@ -392,7 +392,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 13,
@@ -431,7 +431,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 14,
@@ -474,7 +474,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f89e76613b0>"
+       "<sqlite3.Cursor at 0x7fc7d7564500>"
       ]
      },
      "execution_count": 15,
@@ -488,7 +488,7 @@
     "            SELECT '1' AS EVENT_ID, \n",
     "                   'magdalena.czempas@gmail.com' AS USER_E_MAIL,\n",
     "                   'Employed' AS USER_PROF_STATUS,\n",
-    "                   'Networking' AS USER_EVENT_IMPACT,\n",
+    "                   'I grew my network' AS USER_EVENT_IMPACT,\n",
     "                   '' AS USER_EVENT_IMPACT_OTHER_DESC,\n",
     "                   '4' AS USER_SATISFACTION\n",
     "UNION ALL  SELECT '1' AS EVENT_ID, \n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "42bb96be-529f-4c5c-ae72-069a2802dc7d",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c4780168-21da-4499-b1eb-cc00082faa70",
    "metadata": {},
    "outputs": [],
@@ -562,32 +562,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "fe54a5d1-6a43-435b-9370-b304c0e8e9d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_wpp_FINAL = pd.merge(df_wpp_FINAL, df_wpp_survey_satisfaction, \n",
-    "                        on='USER_E_MAIL', \n",
+    "                        on=['USER_E_MAIL','EVENT_ID'],\n",
     "                        how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "43147791-bb19-4c7a-ac16-fa4f59e00c92",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_wpp_FINAL = pd.merge(df_wpp_FINAL, df_wpp_survey_impact, \n",
-    "                        on='USER_E_MAIL', \n",
+    "                        on=['USER_E_MAIL','EVENT_ID'],\n",
     "                        how='left',\n",
     "                        suffixes = ('_SAT', '_IMPACT'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "2d62ddef-97ce-4a8c-93ac-fd05ebc08dda",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>EVENT_ID_x</th>\n",
+       "      <th>EVENT_ID</th>\n",
        "      <th>USER_NAME</th>\n",
        "      <th>USER_E_MAIL</th>\n",
        "      <th>USER_GENDER</th>\n",
@@ -620,12 +620,10 @@
        "      <th>EVENT_NAME</th>\n",
        "      <th>DATE</th>\n",
        "      <th>EVENT_DESC</th>\n",
-       "      <th>EVENT_ID_y</th>\n",
        "      <th>USER_PROF_STATUS_SAT</th>\n",
        "      <th>USER_EVENT_EXPECT</th>\n",
        "      <th>USER_EVENT_EXPECT_OTHER_DESC</th>\n",
        "      <th>USER_SATISFACTION_SAT</th>\n",
-       "      <th>EVENT_ID</th>\n",
        "      <th>USER_PROF_STATUS_IMPACT</th>\n",
        "      <th>USER_EVENT_IMPACT</th>\n",
        "      <th>USER_EVENT_IMPACT_OTHER_DESC</th>\n",
@@ -643,14 +641,12 @@
        "      <td>Hack'n'Lead 2023</td>\n",
        "      <td>11-12.11.2023</td>\n",
        "      <td>women-friendly hackathon</td>\n",
-       "      <td>1</td>\n",
        "      <td>Employed</td>\n",
        "      <td>Networking, Job Search</td>\n",
        "      <td></td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
        "      <td>Employed</td>\n",
-       "      <td>Networking</td>\n",
+       "      <td>I grew my network</td>\n",
        "      <td></td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -664,12 +660,10 @@
        "      <td>Hack'n'Lead 2023</td>\n",
        "      <td>11-12.11.2023</td>\n",
        "      <td>women-friendly hackathon</td>\n",
-       "      <td>1</td>\n",
        "      <td>Looking for a job</td>\n",
        "      <td>Networking, Job Search</td>\n",
        "      <td>have a fun</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
        "      <td>Employed</td>\n",
        "      <td>I found a job</td>\n",
        "      <td></td>\n",
@@ -685,12 +679,10 @@
        "      <td>Hack'n'Lead 2023</td>\n",
        "      <td>11-12.11.2023</td>\n",
        "      <td>women-friendly hackathon</td>\n",
-       "      <td>1</td>\n",
        "      <td>Looking for a job</td>\n",
        "      <td>Networking, Job Search</td>\n",
        "      <td></td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>Looking for a job</td>\n",
        "      <td>I grew my network</td>\n",
        "      <td></td>\n",
@@ -701,38 +693,33 @@
        "</div>"
       ],
       "text/plain": [
-       "   EVENT_ID_x          USER_NAME                  USER_E_MAIL USER_GENDER  \\\n",
-       "0           1  Magdalena Czempas  magdalena.czempas@gmail.com      female   \n",
-       "1           1      Gabriel Brevi          gabibrevi@gmail.com        male   \n",
-       "2           1         Paul Janes       paul_janes@hotmail.com        male   \n",
+       "   EVENT_ID          USER_NAME                  USER_E_MAIL USER_GENDER  \\\n",
+       "0         1  Magdalena Czempas  magdalena.czempas@gmail.com      female   \n",
+       "1         1      Gabriel Brevi          gabibrevi@gmail.com        male   \n",
+       "2         1         Paul Janes       paul_janes@hotmail.com        male   \n",
        "\n",
        "  USER_NATIONALITY        EVENT_NAME           DATE                EVENT_DESC  \\\n",
        "0           Polish  Hack'n'Lead 2023  11-12.11.2023  women-friendly hackathon   \n",
        "1        Brazilian  Hack'n'Lead 2023  11-12.11.2023  women-friendly hackathon   \n",
        "2               UK  Hack'n'Lead 2023  11-12.11.2023  women-friendly hackathon   \n",
        "\n",
-       "   EVENT_ID_y USER_PROF_STATUS_SAT       USER_EVENT_EXPECT  \\\n",
-       "0           1             Employed  Networking, Job Search   \n",
-       "1           1    Looking for a job  Networking, Job Search   \n",
-       "2           1    Looking for a job  Networking, Job Search   \n",
+       "  USER_PROF_STATUS_SAT       USER_EVENT_EXPECT USER_EVENT_EXPECT_OTHER_DESC  \\\n",
+       "0             Employed  Networking, Job Search                                \n",
+       "1    Looking for a job  Networking, Job Search                   have a fun   \n",
+       "2    Looking for a job  Networking, Job Search                                \n",
        "\n",
-       "  USER_EVENT_EXPECT_OTHER_DESC  USER_SATISFACTION_SAT  EVENT_ID  \\\n",
-       "0                                                   4         1   \n",
-       "1                   have a fun                      5         1   \n",
-       "2                                                   3         1   \n",
+       "   USER_SATISFACTION_SAT USER_PROF_STATUS_IMPACT  USER_EVENT_IMPACT  \\\n",
+       "0                      4                Employed  I grew my network   \n",
+       "1                      5                Employed      I found a job   \n",
+       "2                      3       Looking for a job  I grew my network   \n",
        "\n",
-       "  USER_PROF_STATUS_IMPACT  USER_EVENT_IMPACT USER_EVENT_IMPACT_OTHER_DESC  \\\n",
-       "0                Employed         Networking                                \n",
-       "1                Employed      I found a job                                \n",
-       "2       Looking for a job  I grew my network                                \n",
-       "\n",
-       "   USER_SATISFACTION_IMPACT  \n",
-       "0                         4  \n",
-       "1                         5  \n",
-       "2                         3  "
+       "  USER_EVENT_IMPACT_OTHER_DESC  USER_SATISFACTION_IMPACT  \n",
+       "0                                                      4  \n",
+       "1                                                      5  \n",
+       "2                                                      3  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "a1a6c9e0-6e6c-4260-9ce8-21251f8f154a",
    "metadata": {},
    "outputs": [],
@@ -755,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "464ad3db-3825-4f73-b2f2-9d3217fea831",
    "metadata": {},
    "outputs": [],
@@ -767,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "c41fc3ba-9496-46e6-8a04-b609b87823bc",
    "metadata": {},
    "outputs": [
@@ -833,7 +820,7 @@
        "1           2          SDX  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,6 +828,146 @@
    "source": [
     "df_wpp_EVENTS_FINAL.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1523710-4ea6-4ab6-8caa-652a44ee1a54",
+   "metadata": {},
+   "source": [
+    "#### Impact Measures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0956293f-7bdb-43dc-a7ab-ce12e87e6627",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>USER_SATISFACTION_IMPACT</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EVENT_NAME</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Hack'n'Lead 2023</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  USER_SATISFACTION_IMPACT\n",
+       "EVENT_NAME                                \n",
+       "Hack'n'Lead 2023                         4"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_wpp_FINAL[['EVENT_NAME','USER_SATISFACTION_IMPACT']].groupby('EVENT_NAME').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "38cb8e44-dd8f-48f6-a3da-0a65a8102d55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>EVENT_ID</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EVENT_NAME</th>\n",
+       "      <th>USER_EVENT_IMPACT</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Hack'n'Lead 2023</th>\n",
+       "      <th>I found a job</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>I grew my network</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    EVENT_ID\n",
+       "EVENT_NAME       USER_EVENT_IMPACT          \n",
+       "Hack'n'Lead 2023 I found a job             1\n",
+       "                 I grew my network         2"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_wpp_FINAL[['EVENT_NAME','USER_EVENT_IMPACT','EVENT_ID']].groupby(['EVENT_NAME','USER_EVENT_IMPACT']).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1ce3801-212c-4781-891f-372a4bf954e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
