--- a/WPP_DB.ipynb
+++ b/WPP_DB.ipynb
@@ -21,13 +21,11 @@
    "id": "c3d58dc5-e1cd-486a-9957-5741709673de",
    "metadata": {},
    "source": [
-    "The idea is to build engagement platform where participants, sponsors an partners can keep connected with non-profit organization, share they feedback and success stories or get a support in further development their career in tech or their tech businesses with new talents.Thanks to that they will as well contribute to assess the impact of initiatives run by non-profit organization. \n",
+    "The idea is to build engagement platform where participants, sponsors an partners can keep connected with non-profit organization, share they feedback and success stories or get a support in further development their career in tech or their tech businesses with new talents. Thanks to that they will as well contribute to assess the impact of initiatives run by non-profit organization. \n",
     "\n",
-    "Note: For the purpose of the Hack'n'Lead  we narrowed the scope and focus only on tomeasure impact of one event (Hack'n'Lead 2023).\n",
+    "Note: For the purpose of the Hack'n'Lead  we narrowed the scope and focus only on event impact tracking based on Hack'n'Lead 2023.\n",
     "\n",
-    "The crucial point of that concept is to gather information from involved parties to be able to measure impact. In that narrowed approach we will gather if through survey send to participants, partners and sponsors after the event to collect satisfaction rate (finished with obtain a \n",
-    "\n",
-    "certificate of participation on LinkedId). Moreover, we will follow up with participants after three months to keep them connected and gather information how their situation changed over the time (if they find a job, changes profession, build a broader networking or advanced their skills thanks to the event and support from non-profit organization). This will biuld stronger relationship and feeling that is not one off event but overall support. To be able to attract them to give a feedback after three month non-profit can offer support from rectrureirs to review CV or invite for other networking even of interesting conference."
+    "The crucial point of that concept is to gather information from involved parties to measure direct impact and as well to find in the future new funding opportunites. In our narrowed approach we will gather iformation  through survey send after the event to participants, partners and sponsors to collect satisfaction rate (certificate of participation on LinkedId as incentive). Moreover, we will follow up with participants after three months to keep them connected and gather information how their situation changed over the time (if they find a job, changed profession, build a broader networking or advanced their skills thanks to the event and support from non-profit organization). This will biuld stronger relationship and engagement. To attract participants to give a feedback after three month non-profit can offer support from rectrureirs to review CV or invite for other networking even of interesting conference."
    ]
   },
   {
@@ -43,8 +41,8 @@
    "id": "bfdb055a-01ac-45bd-ae98-1362400e60e3",
    "metadata": {},
    "source": [
-    "One of the component of the solution will be to have a DataBase to store information gathered from participants, sponsors and partners through survey (in future incorporate into engagement platform).\n",
-    "Data from survey will be read via API, stored into DataFrame, transformed and saved in DataBase. Then, data from DataBase will be further transfored to calculate figures for impact report and connected with front end solution. For POC purpose I build a DataBase in SQLite3 which should be replaced by DataBase cloude solution. "
+    "The cruccial component of the solution will be to have a DataBase to store information gathered from participants, sponsors and partners (in the future dB should be incorporated into engagement platform).\n",
+    "Data from survey will be read via API, stored into DataFrame, transformed and saved in DataBase. Then, data from DataBase will be further transfored to calculate figures for impact report and connected with front end solution. For POC purpose I build a DataBase in SQLite3 which should be replaced by DataBase cloude solution and fill with test data. "
    ]
   },
   {
@@ -834,7 +832,7 @@
    "id": "c1523710-4ea6-4ab6-8caa-652a44ee1a54",
    "metadata": {},
    "source": [
-    "#### Impact Measures"
+    "#### Impact Measures Examples"
    ]
   },
   {
@@ -897,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "38cb8e44-dd8f-48f6-a3da-0a65a8102d55",
    "metadata": {},
    "outputs": [
@@ -923,7 +921,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>EVENT_ID</th>\n",
+       "      <th>USER_NAME</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EVENT_NAME</th>\n",
@@ -946,28 +944,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                                    EVENT_ID\n",
-       "EVENT_NAME       USER_EVENT_IMPACT          \n",
-       "Hack'n'Lead 2023 I found a job             1\n",
-       "                 I grew my network         2"
+       "                                    USER_NAME\n",
+       "EVENT_NAME       USER_EVENT_IMPACT           \n",
+       "Hack'n'Lead 2023 I found a job              1\n",
+       "                 I grew my network          2"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_wpp_FINAL[['EVENT_NAME','USER_EVENT_IMPACT','EVENT_ID']].groupby(['EVENT_NAME','USER_EVENT_IMPACT']).count()"
+    "df_wpp_FINAL[['EVENT_NAME','USER_EVENT_IMPACT','USER_NAME']].groupby(['EVENT_NAME','USER_EVENT_IMPACT']).count()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1ce3801-212c-4781-891f-372a4bf954e2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
